[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GUI/MultipleTargetSelector.gd" type="Script" id=1]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GUI/ItemList/MyItemList.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI/ItemList/ChooseGrabRow.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/GUI/InputConsumer.gd" type="Script" id=6]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=7]

[node name="MultipleTarget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
VFXRoot = NodePath("../MultipleTarget")

[node name="ModalBG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="base" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -343.0
margin_top = -247.5
margin_right = 343.0
margin_bottom = 247.5
dialog_ok = true
dialog_cancel = true
title = "Grab What ?"

[node name="HBoxContainer" type="HBoxContainer" parent="base"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 71.0
margin_right = -16.0
margin_bottom = -37.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="base/HBoxContainer"]
margin_right = 200.0
margin_bottom = 387.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
custom_constants/separation = 10

[node name="All" parent="base/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
Text = "[a]ll"
ShortcutKey = "a"
AlwaysOnShortcut = false

[node name="None" parent="base/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
Text = "[n]one"
ShortcutKey = "n"
AlwaysOnShortcut = false

[node name="HSeparator" type="HSeparator" parent="base/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 124.0

[node name="ItemCount" type="Label" parent="base/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 200.0
margin_bottom = 156.0
text = "Total: 15 items"

[node name="TurnCount" type="Label" parent="base/HBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 200.0
margin_bottom = 188.0
text = "Will take 5 turns"

[node name="VSeparator" type="VSeparator" parent="base/HBoxContainer"]
margin_left = 215.0
margin_right = 219.0
margin_bottom = 387.0

[node name="TargetList" parent="base/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 234.0
margin_right = 650.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
Row = ExtResource( 5 )
